--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "node-socks"
   , "version": "0.1.0"
   , "description": "A simple SOCKS implementation and demo proxy"
-  , "author": "Gert Van Gool <gertvangool@gmail.com>"
+  , "author": "SYNAX <https://t.me/ASHWANI10>"
   , "dependencies": {
   }
 }
